--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "zenrebelsbot",
+  "name": "zen-rebels-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Zen Rebels AI Bot",
+  "main": "ZenRebelsBot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ZenRebelsBot.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "node-schedule": "^2.1.1",
-    "node-telegram-bot-api": "^0.66.0"
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3"
   }
 }
