--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.10.0",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "node-cron": "^4.1.1"
+    "node-cron": "^4.1.1",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
